Refer to snapshots by ID rather than timestamp
