# brainstorm/api/controllers/snapshots.py
@@ -1,29 +1,41 @@
+import contextlib
+
 from .errors import create_error_response
 from brainstorm.api.objects import MinimalSnapshot
 from brainstorm.api.objects import NotFoundError
 from brainstorm.api.objects import Snapshot
 
 
-def _db_snapshot_to_minimal_snapshot(db_snapshot):
-    return MinimalSnapshot(db_snapshot.timestamp)
+def _create_minimal_snapshot(snapshot_id, db_snapshot):
+    return MinimalSnapshot(snapshot_id, db_snapshot.timestamp)
 
 
-def _create_snapshot(db_snapshot, results):
-    minimal_snapshot = _db_snapshot_to_minimal_snapshot(db_snapshot)
-    return Snapshot(minimal_snapshot.timestamp, results)
+def _create_snapshot(snapshot_id, db_snapshot, results):
+    minimal_snapshot = _create_minimal_snapshot(snapshot_id, db_snapshot)
+    return Snapshot(minimal_snapshot.snapshot_id, minimal_snapshot.timestamp,
+                    results)
 
 
 def get_snapshots(database, user_id):
     db_snapshots = database.get_snapshots(user_id)
-    return [_db_snapshot_to_minimal_snapshot(db_snapshot).serialize()
-            for db_snapshot in db_snapshots]
+    return [_create_minimal_snapshot(i, db_snapshot).serialize()
+            for i, db_snapshot in enumerate(db_snapshots, start=1)]
 
 
-def get_snapshot(database, user_id, snapshot_timestamp):
-    db_snapshot = database.get_snapshot(user_id, snapshot_timestamp)
-    if db_snapshot is None:
+def get_snapshot_timestamp_by_id(database, user_id, snapshot_id):
+    timestamp = None
+    with contextlib.suppress(Exception):
+        timestamp = database.get_snapshots(user_id)[snapshot_id - 1].timestamp
+    return timestamp
+
+
+def get_snapshot(database, user_id, snapshot_id):
+    snapshot_timestamp = get_snapshot_timestamp_by_id(
+        database, user_id, snapshot_id)
+    if snapshot_timestamp is None:
         return create_error_response(
-            NotFoundError(f'Snapshot {snapshot_timestamp} was not found'))
+            NotFoundError(f'Snapshot ID {snapshot_id!r} was not found'))
 
+    db_snapshot = database.get_snapshot(user_id, snapshot_timestamp)
     results = database.get_results(user_id, snapshot_timestamp)
-    return _create_snapshot(db_snapshot, results).serialize()
+    return _create_snapshot(snapshot_id, db_snapshot, results).serialize()
